@@ -1,3 +1,8 @@
+2004-06-21  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	* boards/anim/minibutton.png: added, created by bruno.
+	* src/boards/python/anim.py: added an anim control area. implemented a frame counter display.
+
 2004-06-20  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	* src/gcompris/gcompris-edit.c: (main): fixed (gcompris_edit was not working anymore for a while)
